--- a/cs559-hw1.html
+++ b/cs559-hw1.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A simple drawing demo</title>
+    <title>CS 559 Homework 1</title>
   </head>
   <body>
     <canvas id="My Canvas"
-            width="400" height="400"
+            width="1000" height="500"
             style="border:1px solid #000;">
     </canvas>
     <br/>
-    <input id="slider1" type="range" min="0" max="100" />
+    <input id="slider1" type="range" min="0" max="310" />
     <br/>
-    <input id="slider2" type="range" min="0" max="100" />
+    <input id="slider2" type="range" min="2" max="10" />
     <script src="demo.js" id="module"></script>
   </body>
 </html>
